Fix alignment of cat photos and descriptions in homepage

--- a/style.css
+++ b/style.css
@@ -67,10 +67,14 @@ button {
     color: #f9faf8;
 }
 
-.box1, .box2, .box3, .box4 {
+ul {
     display: flex;
-    flex-direction: column;
-    margin: 0 50 0 50;
+    
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
 }
 
 .box {
@@ -78,7 +82,7 @@ button {
     margin: 0 20px 0 20px;
     align-self: center;
     display: flex;
-    
+
     
 }
 
@@ -95,4 +99,7 @@ button {
 
 .cat-description {
     text-align: center;
+    display: flex;
+    max-width: 150px;
+    min-width: fit-content;
 }
